--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "jsxSingleQuote": true,
   "singleQuote": true,
+  "jsxSingleQuote": false,
   "semi": true,
   "tabWidth": 2,
   "trailingComma": "all",
