feat: update api

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 VITE_RAPID_API_KEY=376e90c030msh4ec409f2e1684f8p144d19jsn8b561acdd768
 VITE_GEO_IPIFY_API_KEY=at_KPVzx04JR5hVs2H76UCqSmWlbp54P
+VITE_JSONBIN_MASTER_KEY=\$2a\$10\$/39IL7f1zhePI28EX43sPOvXGymGeRAT9aew2ZcxdAl7LoKM9/8e6
